tests/integration/snapshots/integration__conformance__n_object_non_string_key_but_huge_number_instead.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{9999E9999:1}
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `9999`
 --> stdin:1:2
  |
1 | {9999E9999:1}
  | -^^^^
  | |
  | expected due to `{`
